--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="logo">
-                <img src="./Logo.png" alt="logo" style="width: 215px;height: 28px">
+                <img src="./Logo.png" alt="logo" style="width: 215px;height: 28px;padding-top:3px">
             </div>
             <div class="chat">
                 <img src="./icono-chat.png" alt="chatea">
