--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li class="dropDownLi">
                             <button onclick="openDropDown(0)"><b>TAROT</b></button>
                             <ul>
-                                <li><span>TAROT</span></li>
+                                <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
                                 <li><span>Horóscopo</span></li>
                                 <li><span>Numerología</span></li>
@@ -54,6 +54,15 @@
                                 <li><span>Numerología</span></li>
                             </ul>
                             <hr>
+                        </li>
+                        <li class="dropDownLi">
+                            <button onclick="openDropDown(4)"><b>OTROS</b></button>
+                            <ul>
+                                <li><span>Tarot</span></li>
+                                <li><span>Amarres y Hechizos</span></li>
+                                <li><span>Horóscopo</span></li>
+                                <li><span>Numerología</span></li>
+                            </ul>
                         </li>
                     </ul>
                 </div>
