--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="divNavContainer">
                     <ul>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(0)"><b>TAROT</b></button>
+                            <button onclick="openDropDown(0)"><img src="./Tarot.png" alt="Tarot"></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -26,7 +26,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(1)"><b>AMARRES Y HECHIZOS</b></button>
+                            <button onclick="openDropDown(1)"><img src="./Amarresyhechizos.png" alt="Amarres y Hechizos"></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -36,7 +36,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(2)"><b>HORÓSCOPO</b></button>
+                            <button onclick="openDropDown(2)"><img src="./Horoscopo.png" alt="Horóscopo"></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -46,7 +46,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(3)"><b>CONSULTA TU DESTINO</b></button>
+                            <button onclick="openDropDown(3)"><img src="./Descubretudestino.png" alt="tu destino"></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -56,7 +56,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(4)"><b>OTROS</b></button>
+                            <button onclick="openDropDown(4)"><img src="./Otros.png" alt="Otros"></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
