--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <title>AmarreDelDestino</title>
 </head>
 
@@ -12,11 +14,11 @@
     <header>
         <nav>
             <div class="hamburguer">
-                <img src="icono-menu.png" alt="icono menú" onclick="abrirYcerrar()">
+                <img src="./img/icono-menu.png" alt="icono menú" onclick="abrirYcerrar()">
                 <div class="divNavContainer">
                     <ul>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(0)"><img src="./Tarot.png" alt="Tarot"></button>
+                            <button onclick="openDropDown(0)"><b>TAROT</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -26,7 +28,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(1)"><img src="./Amarresyhechizos.png" alt="Amarres y Hechizos"></button>
+                            <button onclick="openDropDown(1)"><b>AMARRES Y HECHIZOS</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -36,7 +38,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(2)"><img src="./Horoscopo.png" alt="Horóscopo"></button>
+                            <button onclick="openDropDown(2)"><b>HOROSCOPO</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -46,7 +48,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(3)"><img src="./Descubretudestino.png" alt="tu destino"></button>
+                            <button onclick="openDropDown(3)"><b>DESCUBRE TU DESTINO</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -56,7 +58,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(4)"><img src="./Otros.png" alt="Otros"></button>
+                            <button onclick="openDropDown(4)"><b>OTROS</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -68,10 +70,10 @@
                 </div>
             </div>
             <div class="logo">
-                <img src="./Logo.png" alt="logo" style="width: 215px;height: 28px;padding-top:3px">
+                <img src="./img/Logo.png" alt="logo" style="width: 215px;height: 28px;padding-top:3px">
             </div>
             <div class="chat">
-                <img src="./icono-chat.png" alt="chatea">
+                <img src="./img/icono-chat.png" alt="chatea">
             </div>
         </nav>
     </header>
