--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <div class="divNavContainer">
                     <ul>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(0)"><b>TAROT</b></button>
+                            <button onclick="openDropDown(0)"><b class="oro">TAROT</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -28,7 +28,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(1)"><b>AMARRES Y HECHIZOS</b></button>
+                            <button onclick="openDropDown(1)"><b class="oro">AMARRES Y HECHIZOS</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -38,7 +38,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(2)"><b>HOROSCOPO</b></button>
+                            <button onclick="openDropDown(2)"><b class="oro">HOROSCOPO</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -48,7 +48,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(3)"><b>DESCUBRE TU DESTINO</b></button>
+                            <button onclick="openDropDown(3)"><b class="oro">DESCUBRE TU DESTINO</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
@@ -58,7 +58,7 @@
                             <hr>
                         </li>
                         <li class="dropDownLi">
-                            <button onclick="openDropDown(4)"><b>OTROS</b></button>
+                            <button onclick="openDropDown(4)"><b class="oro">OTROS</b></button>
                             <ul>
                                 <li><span>Tarot</span></li>
                                 <li><span>Amarres y Hechizos</span></li>
