--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-    rel="stylesheet">
     <title>AmarreDelDestino</title>
 </head>
 
@@ -70,7 +68,7 @@
                 </div>
             </div>
             <div class="logo">
-                <img src="./img/Logo.png" alt="logo" style="width: 215px;height: 28px;padding-top:3px">
+                <img src="./img/Logo.png" alt="logo">
             </div>
             <div class="chat">
                 <img src="./img/icono-chat.png" alt="chatea">
