--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/Goldy.png" />
+    <link rel="shortcut icon" href="./img/goldy.png" />
     <link rel="stylesheet" href="index.css">
     <title>AmarreDelDestino</title>
 </head>
@@ -16,9 +16,6 @@
                 <img src="./img/icono-menu.png" alt="icono menú" onclick="abrirYcerrar()">
                 <div class="divNavContainer">
                     <ul>
-                        <li class="dropDownLi">
-                            <img src="./img/Goldy.png" alt="icon">
-                        </li>
                         <li class="dropDownLi">
                             <button onclick="openDropDown(0)"><b class="oro">TAROT</b></button>
                             <ul>
