--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./img/goldy.png" />
+    <link rel="shortcut icon" href="./img/Goldy.png" />
     <link rel="stylesheet" href="index.css">
     <title>AmarreDelDestino</title>
 </head>
@@ -14,7 +14,7 @@
         <nav>
             <div class="hamburguer">
                 <img src="./img/icono-menu.png" alt="icono menú" onclick="abrirYcerrar()">
-                <div class="divNavContainer">
+                <div id="divNavContainer">
                     <ul>
                         <li class="dropDownLi">
                             <button onclick="openDropDown(0)"><b class="oro">TAROT</b></button>
